jitsi-k8s/k8s/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jitsi
  labels:
    name: jitsi
    app: jitsi-meet
